# 26_SPM

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  legacy_identity_60c1be8b850e49a8b01e79746f9e9ca1.db  legacy_identity_7f4bd95998ee4838ba84d3a0ee2028d0.db  legacy_without_system_admin_9d1d51a78e6341b5bb3afda647b4edc2.db  powershell一键启动.txt  pyproject.toml  run_tests.py  spm_identity.db
.cloudbuild/: build.yml
.codex_tmp_courseware_extract/: L3_.txt  L4_(1).txt  L5_(2).txt  L6_(3).txt  L7_(4).txt
.github/workflows/: test.yml
alembic/: env.py
alembic/versions/: 20260420_000001_initial_schema.py  20260421_000002_backfill_identity_users_write.py  20260423_000003_add_smtp_email_notification_channel.py  20260429_000004_backfill_identity_departments_write.py  20260506_000005_add_reservation_overlap_indexes.py  20260623_000006_add_user_reservation_blocks_and_manual_blocks_permission.py
app/: main.py
app/core/: config.py  database.py  errors.py  model_registry.py  security.py
app/modules/: __init__.py
courseware/: L0 课程介绍.pptx  L7 质量管理(4).pptx
dataset/: README.md  spm_postgres_dump.sql
docs/architecture/: api_contracts.md  data_model.md  project_blueprint.md
miniprogram/: README.md  app.js  app.json  app.wxss  project.config.json  sitemap.json
prompt/: acceptance.md  arc.md  code.md  review.md
scripts/: export_postgres_dump.ps1  huawei_cloud_update.sh  run_postgres_acceptance.ps1  start_backend.ps1
spm_identity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_run_tests.py
(+213 files in other folders)
