[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spm-identity"
version = "0.1.0"
description = "Identity module first implementation for the SPM course project"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.14,<2.0",
    "fastapi>=0.115,<1.0",
    "httpx>=0.28,<1.0",
    "pydantic>=2.12,<3.0",
    "psycopg[binary]>=3.2,<4.0",
    "PyJWT>=2.10,<3.0",
    "SQLAlchemy>=2.0,<3.0",
    "uvicorn>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0,<9.0",
]

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["tests*", "alembic*", "miniprogram*", "templates*", "courseware*", "coursework*", "prompt*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
